--- a/index.html
+++ b/index.html
@@ -5,6 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
+    />
   </head>
-  <body></body>
+  <body>
+    <div id="container">
+      <section id="sec_one">
+        <header>
+          <div class="navbar_menu">
+            <h1><a href="#">Pikalup</a></h1>
+            <ul>
+              <li><a href="#">About</a></li>
+            </ul>
+            <ul>
+              <li><a href="#">Skill</a></li>
+            </ul>
+            <ul>
+              <li><a href="#">Portfolio</a></li>
+            </ul>
+            <ul>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
+        </header>
+      </section>
+    </div>
+  </body>
 </html>
